--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="keywords" content="casa inteligentă, automatizare locuințe, iluminat smart, termostat inteligent, securitate smart, case smart">
     <meta name="author" content="Casa Ta Inteligentă">
     <meta name="robots" content="index, follow">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11536567772">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11536567772');
+</script>
+    
     <title>Casa Ta Inteligentă - Soluții Smart pentru Locuința Ta</title>
     <link rel="canonical" href="https://nenciug.github.io/case-smart/index.html">
     <style>
