--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ro">
 
 <head>
+    <link rel="icon" href="nenciug.webp" type="image/png">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-T3YBWTYJXZ"></script>
 <script>
