--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <link rel="icon" href="nenciug.webp" type="image/png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon-96x96.png" type="image/png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-T3YBWTYJXZ"></script>
 <script>
