--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,9 @@
 <html lang="ro">
 <head>
     <link rel="icon" href="nenciug.webp" type="image/png">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon-96x96.png" type="image/png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
