--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('config', 'AW-11536567772');
 </script>
     
-    <title>Automatizează Casa: Soluții pentru o casa Smart si pentru O Viață Modernă</title>
+    <title>Automatizează Casa: Soluții pentru o casa Smart si pentru o Viață Modernă</title>
     <link rel="canonical" href="https://nenciug.github.io/case-smart/index.html">
     <style>
         body {
