--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
     
     <title>Automatizează Casa: Soluții pentru o casa Smart si pentru o Viață Modernă</title>
-    <link rel="canonical" href="https://nenciug.github.io/case-smart/index.html">
+    <link rel="canonical" href="https://nenciug.github.io/casa-smart/index.html">
     <style>
         body {
             font-family: Arial, sans-serif;
