--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon-96x96.png" type="image/png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Casa Ta Inteligentă",
+  "url": "https://nenciug.github.io/casa-smart/index.html",
+  "logo": "https://nenciug.github.io/casa-smart/apple-touch-icon.png",
+  "sameAs": [
+    "https://facebook.com/pagina-facebook",
+    "https://instagram.com/pagina-instagram"
+  ]
+}
+</script>
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-T3YBWTYJXZ"></script>
